# tradeo

./: .gitignore  CHANGELOG.md  Dockerfile.dev  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: coverage.yml  python-package.yml  testing_coverage.yml
bash/: stop-mt.sh
config/: tox.ini
config/env/: .env.dummy  .env.setup
docs/: build_tag.md  poetry_tips.md
docs/files/: mt_tb_expert.ex5
tests/: basic_strategy_test.py  blocker_test.py  context_managers_test.py  ema_strategy_test.py  files_test.py  forex_client_test.py  forex_test.py  log_test.py  mt_client_test.py  ohlc_test.py  order_type_test.py  paths_test.py  singleton_test.py  strategy_test.py  trading_methods_test.py  utils_test.py
tests/resources/: Bar_Data.json  Commands_0.txt  Historic_Data_USDJPY.json  Historic_Trades.json  Market_Data.json  Messages.json  Messages_Stored.json  Messages_stored.json  Orders.json
tests/resources/AgentFiles/: Bar_Data.json  Historical_Data_SP500.json  Historical_Trades.json  Messages.json  Orders.json  Orders_Stored.json
tradeo/: __init__.py  blocker.py  config.py  files.py  log.py  mt_client.py  mt_message.py  mt_tb_expert.mq5  ohlc.py  order.py  order_operations.py  order_type.py  paths.py  singleton.py  trade.py  trading_methods.py  utils.py
tradeo/bash/: launch-mt5.sh
tradeo/context_managers/: blocker.py
tradeo/event_handlers/: basic_event_handler.py  event_handler.py
tradeo/executable/: basic_forex.py  executable.py
tradeo/strategies/: basic_strategy.py  strategy.py
tradingbot/: __init__.py  agent.mq5  config.py  darwin.py  files.py  forex.py  forex_client.py  log.py  logging.py  mt_client.py  mt_message.py  operation.py  order.py  order_type.py  paths.py  trading_methods.py  utils.py
tradingbot/context_managers/: blocker.py
tradingbot/event_handlers/: basic_event_handler.py  event_handler.py  event_handler_factory.py
tradingbot/executable/: basic_forex.py  executable.py
tradingbot/strategies/: basic_strategy.py  ema_strategy.py  strategy.py  strategy_factory.py
