[tool.poetry]
name = "tradingbot"
version = "0.1.0"
description = ""
authors = ["sorul <cromerovargas2d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.1"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
