[tool.poetry]
name = "tradeo"
version = "0.17.0"
description = ""
authors = ["sorul <cromerovargas2d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.1"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
pandas = "1.5.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
freezegun = "^1.4.0"
flake8-bugbear = "^24.1.17"
flake8-print = "^5.0.0"
flake8-builtins = "^2.2.0"
flake8-eradicate = "^1.5.0"
flake8-pie = "^0.16.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-string-format = "^0.3.0"
flake8-unused-arguments = "^0.0.13"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.14.0"
flake8-literal = "^1.4.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-annotations-complexity = "^0.0.8"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
flake8-annotations = "^3.0.1"
python-dotenv = "^1.0.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
