[tool.poetry]
name = "tradeo"
version = "0.20.0"
description = "This library contains a series of tools to create a trading bot for Forex trading using Metatrader."
readme = "README.md"
authors = [
  "Cayetano Romero Vargas <cromerovargas2d@gmail.com>",
]
license = "MIT"
keywords = [
  "trading",
  "forex",
  "metatrader",
  "bot",
  "investment",
  "finance",
  "trading-bot",
  "trading-strategy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Office/Business :: Financial",
]

[project.urls]
"Repository" = "https://github.com/sorul/tradeo"
"Changelog" = "https://github.com/sorul/tradeo/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9.0"
pytz = "^2024.2"
pandas = "^2.2.3"
requests = "^2.32.3"
psutil = "^6.1.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.1"
flake8-bugbear = "^24.8.19"
flake8-print = "^5.0.0"
flake8-builtins = "^2.5.0"
flake8-eradicate = "^1.5.0"
flake8-pie = "^0.16.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-string-format = "^0.3.0"
flake8-unused-arguments = "^0.0.13"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.15.0"
flake8-literal = "^1.4.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-annotations-complexity = "^0.0.8"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^2.0.0"
flake8-pytest = "^1.4"
flake8-annotations = "^3.1.1"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.5"

[tool.pytest.ini_options]
env = [
    "TB_ACTIVATE_SYSLOG=true",
    "TB_ACTIVATE_TELEGRAM=true",
]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
